@@ -1,3 +1,12 @@
+2020-11-10  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        Unreviewed, reverting r269403
+        https://bugs.webkit.org/show_bug.cgi?id=218143
+
+        Now, bytecode list is moved out of JSCConfig. So it is not large size now.
+
+        * wtf/WTFConfig.h:
+
 2020-11-10  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r269660.
